improve rss xml

--- a/config.toml
+++ b/config.toml
@@ -3,7 +3,14 @@ languageCode = "zh-cn"
 Title = "川叶"
 # Copyright notice. This is displayer in the footer.
 copyright = "&copy; 川叶 版权所有"
+# keep old feed style for continuity
+rssuri = "feed.xml"
+rssLimit = 20
 hasCJKLanguage = true
+
+[author]
+    name = "川叶"
+    email = "riverscn@gmail.com"
 
 [permalinks]
   posts = "/:year/:slug/"
