update post & .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,2 @@
-yulib.resource/content/post/yufolder.config
+yulib.resource
 yulib.config
-yulib.resource/yufolder.config
-yulib.resource/content/yufolder.config
