change deploy baseurl

--- a/config.toml
+++ b/config.toml
@@ -41,7 +41,7 @@ hasCJKLanguage = true
   # Disqus shortname
   disqus = ""
   # Google Analytics API key.
-  # ga_api_key = "Your Google Analytics tracking id"
+  ga_api_key = "UA-1943325-7"
   author = "川叶"
   authorwebsite = "lishun.me"
   avatar = "/images/me.png"
