--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,8 @@
-[submodule "themes/hugo_theme_pickles"]
-	path = themes/hugo_theme_pickles
-	url = git@github.com:mismith0227/hugo_theme_pickles.git
-	branch = release
 [submodule "public"]
 	path = public
 	url = git@github.com:riverscn/riverscn.github.io.git
 	branch = master
+[submodule "themes/hugo_theme_pickles"]
+	path = themes/hugo_theme_pickles
+	url = https://github.com/mismith0227/hugo_theme_pickles
+	branch = release
